# lite_serial_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml
include/: lite_serial.hpp  lite_serial_node.hpp
launch/: lite_serial_demo.launch
src/: lite_serial.cpp  lite_serial_node.cpp
