<?xml version="1.0"?>
<package format="2">
  <name>lite_serial_ros</name>
  <version>3.0.0</version>
  <description>The lite_serial_ros package</description>
  <maintainer email="research.robosho@gmail.com">ROBOSHO</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
